--- a/index.html
+++ b/index.html
@@ -1929,5 +1929,14 @@ window.onload = function() {
  مدرسة غرناطة الابتدائية - العام الدراسي 1446هـ ،
  للتواصل: https://x.com/AbuRasheed12 ، t237265@rb.moe.gov.sa    </footer>
 
+        <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-W33PZW3VJV"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-W33PZW3VJV');
+</script>
 
 </body></html>
